--- a/shortener/templates/shortener/already-exists.html
+++ b/shortener/templates/shortener/already-exists.html
@@ -1,7 +1,15 @@
-<div style='align-text: center;width: 800px; margin: 0 auto;'>
-    <h1>Exists</h1>
+{% extends "base.html" %}
+
+{% block title %}
+{{ object.shortcode }} | {{ block.super }} 
+{% endblock title %}
+
+{% block content %}
+<div class=''>
+    <h1>Exists Already</h1>
     <p>{{ object.url }}</p>
-    {% if object.clickevent %}<p>Count: {{ object.clickevent.count }}</p>{% endif %}
-    <p><a href='{{ object.get_short_url }}'>{{ object.get_short_url }}</a></p>
-     <a href='/'>+ New</a>
+
+    <p><a class='btn btn-primary btn-link'  href='{{ object.get_short_url }}'>{{ object.get_short_url }}</a></p>
+    <a class='btn btn-default' href='/'>+ New</a>
 </div>
+{% endblock content %}
